	PR c++/56135 	* pt.c (tsubst_copy_and_build): Don't forget any new 	captures that arose from use of dependent names.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@196021 138bc75d-0d04-0410-961f-82ee72b054a4